better test setup

--- a/sudoku-compiled.conf
+++ b/sudoku-compiled.conf
@@ -16,5 +16,5 @@ bind -n a {
 
 bind -n b {
   # rows
-  display -d 10000 '<%= is_ok(all_x(1)) %>'
+  display -d 10000 '#{e|==:45,#{e|+:#{e|+:#{e|+:#{e|+:#{e|+:#{e|+:#{e|+:#{e|+:#{@x1y1},#{@x2y1}},#{@x3y1}},#{@x4y1}},#{@x5y1}},#{@x6y1}},#{@x7y1}},#{@x8y1}},#{@x9y1}}}'
 }
