--- a/sudoku.conf
+++ b/sudoku.conf
@@ -12,5 +12,5 @@ bind b {
 
 bind c {
   new-session -d -s other
-  run 'tmux set -t other @x1y1 "#{@x1y1}-a"'
+  run '<%= copy_options("other") %>'
 }
