subscript function works

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -7,10 +7,18 @@ bind a {
 }
 
 bind b {
-  display -d 10000 '<%= everything_ok %>'
+  if -F '<%= everything_ok %>' {
+    display 'it ok'
+  } {
+    display 'oh no'
+  }
 }
 
 bind c {
   new-session -d -s other
   run '<%= copy_options("other") %>'
+}
+
+bind d {
+  display -d 10000 '<%= subs "@blanks", "#S" %>'
 }
