--- a/sudoku.conf
+++ b/sudoku.conf
@@ -1,24 +1,24 @@
-new-session
 source-file sudoku-data.conf
 
 bind a {
+  display -d 1000 '<%= everything_ok %>'
+}
+
+bind b {
   run "tmux set-buffer '<%= show_state %>'"
   show-buffer
 }
 
-bind b {
+set-hook -g session-created {
   if -F '<%= everything_ok %>' {
-    display 'it ok'
+    run "tmux set-buffer '<%= show_state %>'"
+    display 'Sudoku solved!'
+    show-buffer
   } {
-    display 'oh no'
+    confirm-before -p 'recurse?' {
+      display 'RECURSION'
+      # do it in the background and then switch, change hook to switch
+      run 'tmux new-session'
+    }
   }
-}
-
-bind c {
-  new-session -d -s other
-  run '<%= copy_options("other") %>'
-}
-
-bind d {
-  display -d 10000 '<%= x_sub "@blanks", "#S" %>'
 }
