getting even closer

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -1,5 +1,7 @@
 source-file sudoku-data.conf
 
+set -g focus-events on
+
 bind a {
   display -d 1000 '<%= everything_ok %>'
 }
@@ -9,16 +11,30 @@ bind b {
   show-buffer
 }
 
-set-hook -g session-created {
-  if -F '<%= everything_ok %>' {
-    run "tmux set-buffer '<%= show_state %>'"
-    display 'Sudoku solved!'
-    show-buffer
+bind d {
+  display '<%= x_sub "@blanks", "#S" %>'
+}
+
+set-hook -g pane-focus-in {
+  display 'focussing...'
+  if -F '#{@current_number}' {
+    set -g @current_number '#{e|+:@current_number,1}'
   } {
-    confirm-before -p 'recurse?' {
-      display 'RECURSION'
-      # do it in the background and then switch, change hook to switch
-      run 'tmux new-session'
+    set -g @current_number '1'
+  }
+  if -F '#{e|<:9,@current_number}' {
+    # fail, switch back to previous session
+    display "failed"
+  }
+  # check if we've got to the end of the blanks
+  if -F '<%= x_sub "@blanks", "#S" %><%= y_sub "@blanks", "#S" %>' {
+    # put the number in the thing
+    run "tmux set '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>' '#{@current_number}'"
+  } {
+    if -F '<%= everything_ok %>' {
+      display 'Solved!'
+    } {
+      display 'not solved'
     }
   }
 }
