better session switching

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -2,10 +2,6 @@ source-file sudoku-data.conf
 
 set -g focus-events on
 
-bind a {
-  display -d 1000 '<%= everything_ok %>'
-}
-
 bind b {
   run "tmux set-buffer '<%= show_state %>'"
   show-buffer
@@ -15,25 +11,34 @@ bind d {
   display '<%= x_sub "@blanks", "#S" %>'
 }
 
+bind k {
+  if -F '#{?#{N/s:#{e|+:#S,1}},0,1}' {
+    new-session -d -n '#{e|+:#S,1}'
+  }
+  run "tmux switch-client -t '#{e|+:#S,1}'"
+}
+
 set-hook -g pane-focus-in {
   display 'focussing...'
   if -F '#{@current_number}' {
-    set -g @current_number '#{e|+:@current_number,1}'
+    set -s @current_number '#{e|+:@current_number,1}'
   } {
-    set -g @current_number '1'
+    set -s @current_number '1'
   }
   if -F '#{e|<:9,@current_number}' {
-    # fail, switch back to previous session
-    display "failed"
+    set -s @current_number '1'
+    run "tmux switch-client -t '#{e|+:#S,1}'"
   }
   # check if we've got to the end of the blanks
   if -F '<%= x_sub "@blanks", "#S" %><%= y_sub "@blanks", "#S" %>' {
     # put the number in the thing
     run "tmux set '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>' '#{@current_number}'"
   } {
+    # We're at the end
     if -F '<%= everything_ok %>' {
       display 'Solved!'
     } {
+      # increase num and try again
       display 'not solved'
     }
   }
