Remove some unused code

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -1,25 +1,37 @@
 source-file sudoku-data.conf
 
-set -g focus-events on
+new-session
+<% if automatic %>
+new-window -d 'TMUX= tmux -L <%= socket %> attach -t "\$0"'
+<% else %>
+new-window -d 'cat'
+<% end %>
+
+set -g @current_num 0
+
+bind -n a {
+  if -F '#{e|>:#{@current_num},10}' {
+    send-keys -t :1 b
+  } {
+    run "tmux set -s @current_num '#{e|+:#{@current_num},1}'"
+    send-keys -t :1 a
+  }
+}
 
 bind b {
   run "tmux set-buffer '<%= show_state %>'"
   show-buffer
 }
 
-bind d {
-  display '<%= x_sub "@blanks", "#S" %>'
-}
-
-bind k {
-  if -F '#{?#{N/s:#{e|+:#S,1}},0,1}' {
-    new-session -d -n '#{e|+:#S,1}'
+bind -n k {
+  if -F '<%= more_array? "@blanks", "#S" %>' {
+    display 'mote <%= x_sub "@blanks", "#S" %>'
+  } {
+    display 'no blanks'
   }
-  run "tmux switch-client -t '#{e|+:#S,1}'"
 }
 
-set-hook -g pane-focus-in {
-  display 'focussing...'
+bind -n n {
   if -F '#{@current_number}' {
     set -s @current_number '#{e|+:@current_number,1}'
   } {
@@ -35,7 +47,7 @@ set-hook -g pane-focus-in {
     run "tmux set '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>' '#{@current_number}'"
   } {
     # We're at the end
-    if -F '<%= everything_ok %>' {
+    if -F '<%= grid_ok %>' {
       display 'Solved!'
     } {
       # increase num and try again
