incrementing the number works!

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -9,7 +9,7 @@ new-window -d 'cat'
 
 set -g @current_num 0
 
-bind -n a {
+bind a {
   if -F '#{e|>:#{@current_num},10}' {
     send-keys -t :1 b
   } {
@@ -23,35 +23,27 @@ bind b {
   show-buffer
 }
 
-bind -n k {
+bind k {
   if -F '<%= more_array? "@blanks", "#S" %>' {
-    display 'mote <%= x_sub "@blanks", "#S" %>'
+    # set 
   } {
-    display 'no blanks'
-  }
-}
-
-bind -n n {
-  if -F '#{@current_number}' {
-    set -s @current_number '#{e|+:@current_number,1}'
-  } {
-    set -s @current_number '1'
-  }
-  if -F '#{e|<:9,@current_number}' {
-    set -s @current_number '1'
-    run "tmux switch-client -t '#{e|+:#S,1}'"
-  }
-  # check if we've got to the end of the blanks
-  if -F '<%= x_sub "@blanks", "#S" %><%= y_sub "@blanks", "#S" %>' {
-    # put the number in the thing
-    run "tmux set '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>' '#{@current_number}'"
-  } {
-    # We're at the end
+    # check if solved, if yes: exit
+    # if no:
+    # increase number
     if -F '<%= grid_ok %>' {
       display 'Solved!'
     } {
-      # increase num and try again
-      display 'not solved'
+
     }
   }
+}
+
+bind g {
+  # if -F '<%= grid_ok %>' {
+  #   display 'Solved!'
+  # } {
+    rename-window '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>'
+    # rename-window '#{e|+:1,#{E:##{#W#}}}'
+    run "tmux set '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>' '#{e|+:1,#{E:##{#W#}}}'"
+  # }
 }
