Oops fix solved checking

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -38,12 +38,19 @@ bind k {
   }
 }
 
+bind s {
+  if -F '<%= grid_ok %>' {
+    display 'Solved!'
+  } {
+    display 'not solved'
+  }
+}
+
 bind g {
-  # if -F '<%= grid_ok %>' {
-  #   display 'Solved!'
-  # } {
+  if -F '<%= grid_ok %>' {
+    display 'Solved!'
+  } {
     rename-window '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>'
-    # rename-window '#{e|+:1,#{E:##{#W#}}}'
-    run "tmux set '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>' '#{e|+:1,#{E:##{#W#}}}'"
-  # }
+    run "tmux set '#W' '#{e|+:1,#{E:##{#W#}}}'"
+  }
 }
