--- a/sudoku.conf
+++ b/sudoku.conf
@@ -1,56 +1,36 @@
 source-file sudoku-data.conf
 
 new-session
-<% if automatic %>
 new-window -d 'TMUX= tmux -L <%= socket %> attach -t "\$0"'
-<% else %>
-new-window -d 'cat'
-<% end %>
 
-set -g @current_num 0
-
-bind a {
-  if -F '#{e|>:#{@current_num},10}' {
-    send-keys -t :1 b
+bind -n n {
+  # check if we've solved it yet
+  if -F '<%= grid_ok %>' {
+    display 'Solved!'
+    run "tmux set-buffer '<%= show_state %>'"
+    show-buffer
   } {
-    run "tmux set -s @current_num '#{e|+:#{@current_num},1}'"
-    send-keys -t :1 a
+    # increment the next value by one
+    send-keys -t :1 G
   }
 }
 
-bind b {
-  run "tmux set-buffer '<%= show_state %>'"
-  show-buffer
-}
-
-bind k {
-  if -F '<%= more_array? "@blanks", "#S" %>' {
-    # set 
-  } {
-    # check if solved, if yes: exit
-    # if no:
-    # increase number
-    if -F '<%= grid_ok %>' {
-      display 'Solved!'
+bind -n G {
+  # increment current value
+  rename-window '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>'
+  run "tmux set '#W' '#{e|+:1,#{E:##{#W#}}}'"
+  if -F '#{e|>:#{E:##{#W#}},9}' {
+    # reset to 1
+    run "tmux set '#W' '1'"
+    # point to next cell
+    rename-session '#{e|+:1,#S}'
+    if -F '<%= more_array? "@blanks", "#S" %>' {
+      send-keys -t :1 G
     } {
-
+      display 'FAILED! oh no!'
     }
-  }
-}
-
-bind s {
-  if -F '<%= grid_ok %>' {
-    display 'Solved!'
   } {
-    display 'not solved'
-  }
-}
-
-bind g {
-  if -F '<%= grid_ok %>' {
-    display 'Solved!'
-  } {
-    rename-window '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>'
-    run "tmux set '#W' '#{e|+:1,#{E:##{#W#}}}'"
+    rename-session '0'
+    send-keys -t :1 n
   }
 }
