--- a/sudoku.conf
+++ b/sudoku.conf
@@ -3,12 +3,25 @@ source-file sudoku-data.conf
 new-session
 new-window -d 'TMUX= tmux -L <%= socket %> attach -t "\$0"'
 
+set -g status 5
+set -g status-format[0] "top: <%= full_row 0 %> bottom: <%= full_row 5 %>"
+set -g status-format[1] "     <%= full_row 1 %>         <%= full_row 6 %>"
+set -g status-format[2] "     <%= full_row 2 %>         <%= full_row 7 %>"
+set -g status-format[3] "     <%= full_row 3 %>         <%= full_row 8 %>"
+set -g status-format[4] "     <%= full_row 4 %>"
+
+set-hook -g client-attached {
+  send-keys -t :1 n
+}
+
 bind -n n {
   # check if we've solved it yet
   if -F '<%= grid_ok %>' {
     display 'Solved!'
     run "tmux set-buffer '<%= show_state %>'"
-    show-buffer
+    # show-buffer
+    save-buffer sudoku-solution
+    kill-server
   } {
     # increment the next value by one
     send-keys -t :1 G
