--- a/sudoku.conf
+++ b/sudoku.conf
@@ -8,20 +8,28 @@ set -g status-format[0] "top: <%= full_row 0 %> bottom: <%= full_row 5 %>"
 set -g status-format[1] "     <%= full_row 1 %>         <%= full_row 6 %>"
 set -g status-format[2] "     <%= full_row 2 %>         <%= full_row 7 %>"
 set -g status-format[3] "     <%= full_row 3 %>         <%= full_row 8 %>"
-set -g status-format[4] "     <%= full_row 4 %>"
+set -g status-format[4] "     <%= full_row 4 %> press q to quit."
 
 set-hook -g client-attached {
   send-keys -t :1 n
 }
+
+bind -n q { kill-server }
+bind -n C-c { kill-server }
+
+bind -n o { set -g @quit_on_finish 1 }
 
 bind -n n {
   # check if we've solved it yet
   if -F '<%= grid_ok %>' {
     display 'Solved!'
     run "tmux set-buffer '<%= show_state %>'"
-    # show-buffer
-    save-buffer sudoku-solution
-    kill-server
+    if -F '#{@quit_on_finish}' {
+      save-buffer sudoku-solution
+      kill-server
+    } {
+      show-buffer
+    }
   } {
     # increment the next value by one
     send-keys -t :1 G
