Set quit on finish automatically

--- a/sudoku.conf
+++ b/sudoku.conf
@@ -17,6 +17,7 @@ set-hook -g client-attached {
 bind -n q { kill-server }
 bind -n C-c { kill-server }
 
+set -g @quit_on_finish "$TMUX_QUIT_ON_FINISH"
 bind -n o { set -g @quit_on_finish 1 }
 
 bind -n n {
