--- a/sudoku.conf
+++ b/sudoku.conf
@@ -10,10 +10,6 @@ set -g status-format[2] "     <%= full_row 2 %>         <%= full_row 7 %>"
 set -g status-format[3] "     <%= full_row 3 %>         <%= full_row 8 %>"
 set -g status-format[4] "     <%= full_row 4 %> press q to quit."
 
-set-hook -g client-attached {
-  send-keys -t :1 n
-}
-
 bind -n q { kill-server }
 bind -n C-c { kill-server }
 
@@ -24,7 +20,7 @@ bind -n n {
   # check if we've solved it yet
   if -F '<%= grid_ok %>' {
     display 'Solved!'
-    run "tmux set-buffer '<%= show_state %>'"
+    run -C "set-buffer '<%= show_state %>'"
     if -F '#{@quit_on_finish}' {
       save-buffer sudoku-solution
       kill-server
@@ -40,10 +36,10 @@ bind -n n {
 bind -n G {
   # increment current value
   rename-window '@x<%= x_sub "@blanks", "#S" %>y<%= y_sub "@blanks", "#S" %>'
-  run "tmux set '#W' '#{e|+:1,#{E:##{#W#}}}'"
+  run -C "set '#W' '#{e|+:1,#{E:##{#W#}}}'"
   if -F '#{e|>:#{E:##{#W#}},9}' {
     # reset to 1
-    run "tmux set '#W' '1'"
+    run -C "set '#W' '1'"
     # point to next cell
     rename-session '#{e|+:1,#S}'
     if -F '<%= more_array? "@blanks", "#S" %>' {
@@ -56,3 +52,5 @@ bind -n G {
     send-keys -t :1 n
   }
 }
+
+send-keys -t :1 n
